# amocrm-mcp

./: .gitignore  QA_TEST_PROMPT.md  README.md  amocrm_client.py  auth_setup.py  config.py  pyproject.toml  server.py
